# Orion-Emulator

./: .gitignore  README.md  RELATORIO_CORRECAO_ERROS_JOGOS.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/proot/: CMakeLists.txt
app/src/main/cpp/winlator/: proot_wrapper.cpp  vulkan.cpp
app/src/main/kotlin/com/winlator/orion/: MainActivity.kt  XServerDisplayActivity.kt
app/src/main/kotlin/com/winlator/orion/core/: ContainerManager.kt  FileUtils.kt  PRoot.kt  TarCompressorUtils.kt  WineExecutor.kt  XServerManager.kt
app/src/main/kotlin/com/winlator/orion/data/: GlobalContainer.kt
app/src/main/kotlin/com/winlator/orion/ui/screens/: ContainersScreen.kt  ContentsScreen.kt  ControlsScreen.kt  SettingsScreen.kt  SetupScreen.kt  ShortcutsScreen.kt  XServerDisplayScreen.kt
app/src/main/kotlin/com/winlator/orion/ui/theme/: Theme.kt  Type.kt
app/src/main/kotlin/com/winlator/orion/ui/widgets/: Dialogs.kt
app/src/main/res/xml/: file_paths.xml
